--- a/freethyme/src/app/app.component.html
+++ b/freethyme/src/app/app.component.html
@@ -16,8 +16,9 @@
 
   <div *ngIf="auth.user$ | async">
 
-      <button (click)="auth.getCalendar()" class="button is-success">Get Google Calendar</button>
+      <button (click)="auth.getEvents()" class="button is-success">Get Events</button>
       <button (click)="auth.insertEvent()" class="button is-warning">Add Event</button>
+      <button (click)="auth.getCalendars()" class="button is-warning">Get Calendar IDs</button>
 
       <div *ngFor="let item of auth.calendarItems">
           <h3>{{ item.summary }} - {{ item.status }}</h3>
@@ -25,6 +26,11 @@
           <p>{{ item.description }}</p>
           <hr>
       </div>
+
+      <div *ngFor="let item of auth.calendarList">
+        <h3>{{ item.id }}</h3>
+        <hr>
+    </div>
 
   </div>
 
