--- a/freethyme/src/app/user/login-page/login-page.component.html
+++ b/freethyme/src/app/user/login-page/login-page.component.html
@@ -12,6 +12,7 @@
     </div>
 
     <div *ngIf="auth.user$ | async as user" class="logout">
+      <img src="{{ user.photoURL }}" width="50px" />
       <p>
         Logged in as <strong>{{ user.email }}</strong>
       </p>
