--- a/freethyme/src/app/app.component.html
+++ b/freethyme/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nb-layout>
   <nb-layout-header fixed>
-    <!-- Insert header here -->
+    <app-header class="app-header"></app-header>
   </nb-layout-header>
 
   <nb-layout-column>
