--- a/freethyme/src/app/components/calendar-grid-item/calendar-grid-item.component.html
+++ b/freethyme/src/app/components/calendar-grid-item/calendar-grid-item.component.html
@@ -4,15 +4,36 @@
       id="container"
       [ngStyle]="imageURL && { 'background-image': 'url(' + imageURL + ')' }"
     >
-      <div class="favorite">
-        <nb-icon
-          icon="star-outline"
-          [ngStyle]="{ color: accentColor }"
-        ></nb-icon>
+      <div class="top-container">
+        <div class="favorite">
+          <nb-icon
+            icon="star-outline"
+            [ngStyle]="{ color: accentColor }"
+          ></nb-icon>
+        </div>
+        <div class="calendar-title">
+          <span>{{ title }}</span>
+        </div>
+        <div class="calendar-information">
+          <div class="calendar-overview">
+            <span>{{ displayTime }} | {{ meetingType }}</span>
+          </div>
+          <div
+            class="calendar-description"
+            ellipsis
+            [ellipsis-content]="description"
+          ></div>
+        </div>
       </div>
-      <h6>{{ title }}</h6>
-      <p>{{ meetingLength }} mins, {{ meetingType }}</p>
-      <p>{{ description }}</p>
+      <div class="bottom-container-user-share">
+        <hr />
+        <div class="user-share">
+          <div class="user"></div>
+          <button nbButton>
+            Share
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
