--- a/freethyme/src/app/playground/playground.component.html
+++ b/freethyme/src/app/playground/playground.component.html
@@ -30,5 +30,6 @@
 </div>
 
 <app-calendar-grid-item
-  title="Work - Software Engineering"
+  title="Work - Software Engineering heheXD"
+  description="Meet at the skatepark yo, this is an example of a long description. I made this so long that this should now span three lines."
 ></app-calendar-grid-item>
