--- a/freethyme/src/app/components/calendar-grid-item/calendar-grid-item.component.html
+++ b/freethyme/src/app/components/calendar-grid-item/calendar-grid-item.component.html
@@ -28,7 +28,11 @@
       <div class="bottom-container-user-share">
         <hr />
         <div class="user-share">
-          <div class="user"></div>
+          <app-user-bar
+            [userCount]="memberCount"
+            [users]="members"
+            [userImg]="profileImg"
+          ></app-user-bar>
           <button nbButton>
             Share
           </button>
