--- a/freethyme/src/app/components/user-bar/user-bar.component.html
+++ b/freethyme/src/app/components/user-bar/user-bar.component.html
@@ -1,1 +1,25 @@
-<p>user-bar works!</p>
+<div class="user-parent">
+  <div *ngFor="let user of users | slice: 0:5; let i = index">
+    <div *ngIf="userImg[user.UID]">
+      <img
+        src="{{ userImg[user.UID] }}"
+        class="user-img"
+        [ngStyle]="{ left: -i * 0.4 + 'em' }"
+      />
+    </div>
+    <div
+      *ngIf="!userImg[user.UID]"
+      class="user-text"
+      [ngStyle]="{ left: -i * 0.4 + 'em' }"
+    >
+      <span>{{ user.nickname[0] }}</span>
+    </div>
+  </div>
+  <div
+    *ngIf="userCount > 5"
+    class="user-text"
+    [ngStyle]="{ left: -6 * 0.4 + 'em' }"
+  >
+    <span>{{ "+" + (userCount - 5) }}</span>
+  </div>
+</div>
