--- a/freethyme/src/app/playground/playground.component.html
+++ b/freethyme/src/app/playground/playground.component.html
@@ -32,4 +32,7 @@
 <app-calendar-grid-item
   title="Work - Software Engineering heheXD"
   description="Meet at the skatepark yo, this is an example of a long description. I made this so long that this should now span three lines."
+  [members]="userExample"
+  [profileImg]="images"
+  [memberCount]="7"
 ></app-calendar-grid-item>
