--- a/freethyme/src/app/components/calendar-grid-item/calendar-grid-item.component.html
+++ b/freethyme/src/app/components/calendar-grid-item/calendar-grid-item.component.html
@@ -2,6 +2,7 @@
   <div id="background" [ngStyle]="{ background: accentColor }">
     <div
       id="container"
+      matRipple
       [ngStyle]="imageURL && { 'background-image': 'url(' + imageURL + ')' }"
     >
       <div class="top-container">
