--- a/freethyme/src/app/components/calendar-grid-item/calendar-grid-item.component.scss
+++ b/freethyme/src/app/components/calendar-grid-item/calendar-grid-item.component.scss
@@ -1,3 +1,13 @@
+@mixin no-select {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+
 .parent {
   --goldenRatio: 1.618;
   --height: 15em;
@@ -13,6 +23,7 @@
 }
 
 #container {
+  @include no-select;
   position: relative;
   display: flex;
   flex-direction: column;
