--- a/freethyme/src/app/components/create-calendar/create-calendar.component.html
+++ b/freethyme/src/app/components/create-calendar/create-calendar.component.html
@@ -1,1 +1,34 @@
-<p>create-calendar works!</p>
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
+  <mat-form-field [color]="title.valid && 'accent'">
+    <input
+      matInput
+      formControlName="title"
+      type="text"
+      placeholder="Title"
+      autocomplete="off"
+    />
+    <mat-error *ngIf="title.invalid && title.dirty">
+      You must a title for the calendar
+    </mat-error>
+  </mat-form-field>
+  <mat-form-field>
+    <textarea
+      placeholder="Calendar description"
+      matInput
+      formControlName="description"
+    ></textarea>
+  </mat-form-field>
+  <mat-button-toggle-group formControlName="color">
+    <mat-button-toggle *ngFor="let opt of colors" [value]="opt">
+      <mat-icon [ngStyle]="{ color: opt }">lens</mat-icon>
+    </mat-button-toggle>
+  </mat-button-toggle-group>
+  <mat-form-field>
+    <mat-label>Meeting Type</mat-label>
+    <mat-select>
+      <mat-option *ngFor="let type of meetingTypes" [value]="type.value">
+        {{ type.viewValue }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+</form>
