--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -1,23 +1,19 @@
-<nb-card class="login-card">
-  <nb-card-header>
-    Login with your Calendar Provider
-  </nb-card-header>
-  <nb-card-body>
-    <div *ngIf="!(auth.user$ | async)">
-      <br /><br />
-      <button nbButton (click)="auth.login()">
-        <img src="/assets/google-logo.svg" /> &nbsp; &nbsp; Login with Google
-      </button>
-      <br /><br />
-    </div>
+<main>
+  <div *ngIf="!(auth.user$ | async)">
+    <h1>Login with your Calendar Provider</h1>
+    <br /><br />
+    <button (click)="auth.login()">
+      <img src="/assets/google-logo.svg" /> Login with Google
+    </button>
+    <br /><br />
+  </div>
 
-    <div *ngIf="auth.user$ | async as user" class="logout">
-      <img src="{{ user.photoURL }}" width="50px" />
-      <p>
-        Logged in as <strong>{{ user.email }}</strong>
-      </p>
+  <div *ngIf="auth.user$ | async as user" class="logout">
+    <img src="{{ user.photoURL }}" width="50px" />
+    <p>
+      Logged in as <strong>{{ user.email }}</strong>
+    </p>
 
-      <button nbButton (click)="auth.logout()">Logout</button>
-    </div>
-  </nb-card-body>
-</nb-card>
+    <button (click)="auth.logout()">Logout</button>
+  </div>
+</main>
