--- a/src/app/home/calendars/calendars.component.html
+++ b/src/app/home/calendars/calendars.component.html
@@ -3,17 +3,18 @@
   rowHeight="16em"
   (window:resize)="onResize($event)"
 >
-  <mat-grid-tile>
+  <mat-grid-tile *ngFor="let room of rooms">
     <app-calendar-grid-item
-      title="Work - Software Engineering heheXD"
-      description="Meet at the skatepark yo, this is an example of a long description. I made this so long that this should now span three lines."
-      [members]="userExample"
-      [profileImg]="images"
-      [memberCount]="7"
+      [calID]="room.roomID"
+      [title]="room.room.title"
+      [description]="room.room.description"
+      [meetingLength]="room.room.meetingLength"
+      [meetingType]="room.room.type"
+      [members]="room.room.members"
+      [profileImg]="room.room.profileImages"
+      [memberCount]="room.room.memberCount"
+      [accentColor]="room.room.color"
     >
     </app-calendar-grid-item>
   </mat-grid-tile>
-  <mat-grid-tile>2</mat-grid-tile>
-  <mat-grid-tile>3</mat-grid-tile>
-  <mat-grid-tile>4</mat-grid-tile>
 </mat-grid-list>
