--- a/src/app/home/calendars/calendars.component.scss
+++ b/src/app/home/calendars/calendars.component.scss
@@ -1,3 +1,16 @@
 mat-grid-tile {
   background: lightblue;
 }
+
+.home-calendars-subheading {
+  display: flex;
+  align-items: center;
+  font-size: 1em;
+  height: 2.75em;
+  width: 14em;
+  margin: 1em 1em 0em 1em;
+}
+
+.home-calendars-subheading-icon {
+  margin-right: 0.5em;
+}
