--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -10,6 +10,7 @@
 
 .home-sidenav-container {
   display: flex;
+  align-items: center;
   flex-direction: column;
   padding-top: 1.2em;
   background-color: #f5faff;
@@ -39,4 +40,8 @@ router-outlet ~ * {
   position: absolute;
   height: 100%;
   width: 100%;
+}
+
+.home-sidenav-container-calendar-button {
+  margin: 2em 0 2em 0;
 }
