--- a/src/app/home/components/create-calendar/create-calendar.component.scss
+++ b/src/app/home/components/create-calendar/create-calendar.component.scss
@@ -5,3 +5,15 @@
 .mat-form-field {
   margin-top: 16px;
 }
+
+.create-calendar-title {
+  width: 100%;
+}
+
+.create-calendar-description {
+  width: 100%;
+}
+
+.create-calendar-colors {
+  left: 50%;
+}
