MVP Finishing Touches

--- a/src/app/calendar-room/add-calendar/add-calendar.component.html
+++ b/src/app/calendar-room/add-calendar/add-calendar.component.html
@@ -1,3 +1,5 @@
+<h4 class="add-calendar-title">Add Events</h4>
+<p>Two weeks of events from selecrted calendars will be copied to the room.</p>
 <form [formGroup]="form" (ngSubmit)="submit()">
   <div
     formArrayName="orders"
@@ -11,6 +13,7 @@
       }}</mat-checkbox
     >
   </div>
-
-  <button>submit</button>
+  <div class="add-calendar-button">
+    <button mat-raised-button color="primary">Add Calendar</button>
+  </div>
 </form>
