--- a/src/app/calendar-room/calendar-room.component.scss
+++ b/src/app/calendar-room/calendar-room.component.scss
@@ -35,3 +35,12 @@
 .calendar-room-cal-header-title {
   font-size: 1em;
 }
+
+.calendar-room-toolar-members {
+  display: flex;
+  align-items: center;
+}
+
+.favorite-button {
+  color: #daa520;
+}
