--- a/src/app/calendar-room/calendar-room.component.html
+++ b/src/app/calendar-room/calendar-room.component.html
@@ -87,6 +87,27 @@
         </mat-button-toggle>
       </mat-button-toggle-group>
     </div>
+    <ng-template
+      #weekViewHourSegmentTemplate
+      let-segment="segment"
+      let-locale="locale"
+      let-segmentHeight="segmentHeight"
+      let-isTimeLabel="isTimeLabel"
+    >
+      <div
+        #segmentElement
+        class="cal-hour-segment"
+        [style.height.px]="segmentHeight"
+        [class.cal-hour-start]="segment.isStart"
+        [class.cal-after-hour-start]="!segment.isStart"
+        [ngClass]="segment.cssClass"
+        (mousedown)="startDragToCreate(segment, $event, segmentElement)"
+      >
+        <div class="cal-time" *ngIf="isTimeLabel">
+          {{ segment.date | calendarDate: "weekViewHour":locale }}
+        </div>
+      </div>
+    </ng-template>
     <div [ngSwitch]="view">
       <mwl-calendar-month-view
         *ngSwitchCase="CalendarView.Month"
@@ -105,6 +126,7 @@
         [events]="events"
         [refresh]="refresh"
         (eventClicked)="handleEvent('Clicked', $event.event)"
+        [hourSegmentTemplate]="weekViewHourSegmentTemplate"
         (eventTimesChanged)="eventTimesChanged($event)"
       >
       </mwl-calendar-week-view>
@@ -113,6 +135,7 @@
         [viewDate]="viewDate"
         [events]="events"
         [refresh]="refresh"
+        [hourSegmentTemplate]="weekViewHourSegmentTemplate"
         (eventClicked)="handleEvent('Clicked', $event.event)"
         (eventTimesChanged)="eventTimesChanged($event)"
       >
