--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,10 +116,16 @@ a {
 }
 
 $border-color: #e1e1e1;
+$cal-bg-primary: #fff;
+$cal-bg-secondary: #fff;
 
 @include cal-theme(
   (
     border-color: $border-color,
+    // the primary background of each component
+      bg-primary: $cal-bg-primary,
+    // the secondary background, used for alternating rows on the day and week views
+      bg-secondary: $cal-bg-secondary,
   )
 );
 
@@ -137,9 +143,39 @@ $border-color: #e1e1e1;
 }
 
 .cal-week-view {
-  .cal-hour:not(:last-child) .cal-hour-segment,
-  .cal-hour:last-child :not(:last-child) .cal-hour-segment {
-    border-bottom: thin solid;
+  .cal-hour:not(:last-child) .cal-hour-segment {
+    border-bottom: thin;
+  }
+
+  .cal-hour:not(:last-child) .cal-hour-start {
+    border-top: thin solid;
     border-color: $border-color;
+  }
+  .cal-time-label-column .cal-hour-segment {
+    width: 70px;
+    height: 100%;
+    border: thin !important;
+  }
+  .cal-time {
+    position: relative;
+    top: -13.5px;
+  }
+
+  .cal-ends-within-day .cal-event {
+    border-top-left-radius: 2.5px;
+    border-top-right-radius: 2.5px;
+  }
+
+  .cal-starts-within-day .cal-event {
+    border-top-left-radius: 2.5px;
+    border-top-right-radius: 2.5px;
+  }
+
+  .cal-time-events .cal-event {
+    width: calc(100% - 2px);
+    height: calc(100% + 2px);
+    margin: 1px;
+    padding: 0 5px;
+    line-height: 25px;
   }
 }
