--- a/src/app/calendar-room/calendar-room.component.html
+++ b/src/app/calendar-room/calendar-room.component.html
@@ -2,6 +2,8 @@
   class="calendar-room-toolar"
   *ngIf="{ room: room$ | async, member: member$ | async } as roomMemDoc"
 >
+
+
   <ng-container *ngIf="roomMemDoc.room as room">
     <ng-container *ngIf="roomMemDoc.member as member">
       <div class="calendar-room-title-container">
@@ -94,27 +96,31 @@
         </mat-button-toggle>
       </mat-button-toggle-group>
     </div>
+
+    <!-- Custome Template For the Time Label Column -->
     <ng-template
-      #weekViewHourSegmentTemplate
+      #customTimeLabelTemplate
       let-segment="segment"
       let-locale="locale"
       let-segmentHeight="segmentHeight"
-      let-isTimeLabel="isTimeLabel"
-    >
+      let-isTimeLabel="isTimeLabel">
       <div
-        #segmentElement
         class="cal-hour-segment"
         [style.height.px]="segmentHeight"
         [class.cal-hour-start]="segment.isStart"
         [class.cal-after-hour-start]="!segment.isStart"
-        [ngClass]="segment.cssClass"
-        (mousedown)="startDragToCreate(segment, $event, segmentElement)"
-      >
-        <div class="cal-time" *ngIf="isTimeLabel">
-          {{ segment.date | calendarDate: "weekViewHour":locale }}
+        [ngClass]="segment.cssClass">
+        <div class="calculations"  *ngIf="isTimeLabel">
+          <div *ngIf="(segment.date | calendarDate:'weekViewHour':locale) as result">
+            <div class = "cal-time" *ngIf="result != '12 AM'">
+              {{result}}
+            </div>
+         </div>
         </div>
       </div>
     </ng-template>
+
+
     <div [ngSwitch]="view">
       <mwl-calendar-month-view
         *ngSwitchCase="CalendarView.Month"
@@ -132,8 +138,8 @@
         [viewDate]="viewDate"
         [events]="events"
         [refresh]="refresh"
+        [hourSegmentTemplate]="customTimeLabelTemplate"
         (eventClicked)="handleEvent('Clicked', $event.event)"
-        [hourSegmentTemplate]="weekViewHourSegmentTemplate"
         (eventTimesChanged)="eventTimesChanged($event)"
       >
       </mwl-calendar-week-view>
