--- a/src/app/calendar-room/calendar-room.component.html
+++ b/src/app/calendar-room/calendar-room.component.html
@@ -3,7 +3,6 @@
   *ngIf="{ room: room$ | async, member: member$ | async } as roomMemDoc"
 >
 
-
   <ng-container *ngIf="roomMemDoc.room as room">
     <ng-container *ngIf="roomMemDoc.member as member">
       <div class="calendar-room-title-container">
@@ -97,25 +96,28 @@
       </mat-button-toggle-group>
     </div>
 
-    <!-- Custome Template For the Time Label Column -->
     <ng-template
       #customTimeLabelTemplate
       let-segment="segment"
       let-locale="locale"
       let-segmentHeight="segmentHeight"
-      let-isTimeLabel="isTimeLabel">
+      let-isTimeLabel="isTimeLabel"
+    >
       <div
+        #segmentElement
         class="cal-hour-segment"
         [style.height.px]="segmentHeight"
         [class.cal-hour-start]="segment.isStart"
         [class.cal-after-hour-start]="!segment.isStart"
-        [ngClass]="segment.cssClass">
+        [ngClass]="segment.cssClass"
+        (mousedown)="startDragToCreate(segment, $event, segmentElement)"
+      >
         <div class="calculations"  *ngIf="isTimeLabel">
           <div *ngIf="(segment.date | calendarDate:'weekViewHour':locale) as result">
             <div class = "cal-time" *ngIf="result != '12 AM'">
               {{result}}
             </div>
-         </div>
+          </div>
         </div>
       </div>
     </ng-template>
@@ -148,7 +150,7 @@
         [viewDate]="viewDate"
         [events]="events"
         [refresh]="refresh"
-        [hourSegmentTemplate]="weekViewHourSegmentTemplate"
+        [hourSegmentTemplate]="customTimeLabelTemplate"
         (eventClicked)="handleEvent('Clicked', $event.event)"
         (eventTimesChanged)="eventTimesChanged($event)"
       >
